<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/rich_content_bab_edit"
        android:title="@string/rich_content_option_edit"
        android:icon="@drawable/ic_outline_edit_black"
        app:showAsAction="always" />
    <item
        android:id="@+id/rich_content_bab_note"
        android:title="@string/rich_content_option_note"
        android:icon="@drawable/ic_note_black"
        app:showAsAction="always" />
    <item
        android:id="@+id/rich_content_bab_archive"
        android:title="@string/rich_content_option_archive"
        android:icon="@drawable/ic_archive_black"
        app:showAsAction="always" />
    <item
        android:id="@+id/rich_content_bab_share"
        android:title="@string/rich_content_option_share"
        android:icon="@drawable/ic_outline_share_black"
        app:showAsAction="always" />

</menu>