<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".AboutActivity">

    <ImageView android:id="@+id/about_back"
        android:layout_height="@dimen/dimen_32"
        android:layout_width="@dimen/dimen_32"
        android:src="@drawable/ic_arrow_left_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_content_desc"
        android:background="?attr/actionBarItemBackground"
        android:layout_margin="@dimen/dimen_8"/>

    <ImageView android:id="@+id/about_logo"
        android:layout_height="72dp"
        android:layout_width="72dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_content_desc"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_36"/>

    <TextView android:id="@+id/about_version"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="@dimen/dimen_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/about_logo"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:text="@string/about_version"/>

    <android.support.v7.widget.CardView
        android:id="@+id/about_cv1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/about_version"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/dimen_8"
        android:backgroundTint="#F1F2F3"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_24">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:padding="@dimen/dimen_8"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/about_author"/>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:layout_marginTop="@dimen/dimen_16"
        app:layout_constraintTop_toBottomOf="@id/about_cv1"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/dimen_8"
        android:backgroundTint="#F1F2F3"
        android:layout_marginEnd="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_24"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/dimen_16">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadingEdge="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:padding="@dimen/dimen_8"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/about_trick_title"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/about_rv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_16"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    android:orientation="vertical"
                    android:layoutAnimation="@anim/favorite_layout_anim">

                </android.support.v7.widget.RecyclerView>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:paddingStart="@dimen/dimen_8"
                    android:paddingEnd="@dimen/dimen_8"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:onClick="showUpdateLog"
                    android:background="?attr/selectableItemBackground"
                    android:text="@string/about_update_log"/>

            </LinearLayout>

        </ScrollView>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>