<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="@color/white"
    android:foreground="?attr/selectableItemBackgroundBorderless"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/rowBG"
        android:layout_height="match_parent"
        android:layout_width="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#F1F2F3"
        android:orientation="horizontal">

        <TextView android:id="@+id/item_archive_rename"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:drawableTop="@drawable/ic_edit_black"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/dimen_8"
            android:drawablePadding="-8dp"
            android:textSize="8sp"
            android:text="@string/item_archive_rename"/>

        <TextView android:id="@+id/item_archive_delete"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:drawableTop="@drawable/ic_delete_black"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:textColor="@color/black"
            android:paddingTop="@dimen/dimen_8"
            android:drawablePadding="-8dp"
            android:textSize="8sp"
            android:text="@string/item_archive_del"/>

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/rowFG"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:paddingStart="@dimen/dimen_16"
        android:paddingEnd="@dimen/dimen_16">

        <utility.RoundedImageView
            android:id="@+id/item_archive_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/img_content_desc"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_archive_folder_normal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:riv_type="circle" />

        <TextView
            android:id="@+id/item_archive_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/side_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/item_archive_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/item_archive_count"
            android:layout_width="42dp"
            android:layout_height="18dp"
            tools:text="12"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:background="@drawable/bg_item_archive_count"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEE"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>