<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <View
        android:layout_width="@dimen/dimen_32"
        android:layout_height="2dp"
        android:background="@color/gray_ccc"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dimen_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:text="@string/new_item_text"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_16"
            android:hint="@string/new_item_title"
            app:hintTextAppearance="@style/CustomTextAppearance"
            app:hintEnabled="true"
            android:background="@drawable/mtf_drawable">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/new_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/new_item_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="#F8F8F8"
            android:gravity="top"
            android:hint="@string/new_item_content"
            android:lines="6"
            android:padding="@dimen/dimen_8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:orientation="horizontal">

            <Button
                android:id="@+id/new_item_cancel_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_weight="1"
                android:background="@drawable/bg_new_item_cancel"
                android:text="@android:string/cancel" />

            <Button
                android:id="@+id/new_item_ok_btn"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="@dimen/dimen_36"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_weight="1"
                android:background="@drawable/bg_new_item_ok"
                android:text="@android:string/ok"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>