<?xml version="1.0" encoding="utf-8"?>
<android.support.design.circularreveal.CircularRevealFrameLayout
    android:id="@+id/self_content_rootView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="52dp"
        android:paddingBottom="@dimen/dimen_16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="12dp"
            android:layout_marginTop="@dimen/dimen_8" >

            <ImageView
                android:id="@+id/self_content_back"
                android:layout_width="@dimen/dimen_24"
                android:layout_height="@dimen/dimen_24"
                android:src="@drawable/ic_arrow_left_black"
                android:background="?attr/actionBarItemBackground"
                android:contentDescription="@string/img_content_desc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dimen_8"
                android:text="@string/new_item_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/favorite_rv_background"
            android:layout_marginTop="@dimen/dimen_8"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginBottom="@dimen/dimen_16"
            android:hint="@string/new_item_title"
            app:hintTextAppearance="@style/CustomTextAppearance"
            app:hintEnabled="true"
            android:background="@drawable/mtf_drawable">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/self_content_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:maxLines="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp" />

        </android.support.design.widget.TextInputLayout>

        <EditText
            android:id="@+id/self_content_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/bg_self_content_et"
            android:gravity="top"
            android:textSize="16sp"
            android:textColor="#000"
            android:hint="@string/new_item_content"
            android:padding="@dimen/dimen_8" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/self_content_btns"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16">

        <Button
            android:id="@+id/self_content_cancel_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36"
            android:layout_weight="1"
            android:background="@drawable/bg_new_item_cancel"
            android:text="@android:string/cancel"
            android:textColor="@color/black"
            android:layout_marginEnd="@dimen/dimen_8"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/self_content_ok_btn"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_36"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/dimen_8"
            android:background="@drawable/bg_new_item_ok"
            android:text="@android:string/ok"
            android:textColor="@color/white"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/self_content_actions"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16"
        android:scrollbars="none"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="52dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/sc_action_image"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_image_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_bold"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_bold_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_italic"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_italic_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_underline"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_underlined_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_big"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_size_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_strikethrough"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_strikethrough_black"
                android:background="@drawable/bg_self_content_action" />
            <ImageView
                android:id="@+id/sc_action_text_color"
                android:layout_width="72dp"
                android:layout_height="@dimen/dimen_32"
                android:paddingTop="@dimen/dimen_4"
                android:paddingBottom="@dimen/dimen_4"
                android:layout_marginStart="@dimen/dimen_8"
                android:contentDescription="@string/img_content_desc"
                android:src="@drawable/ic_format_color_text_black"
                android:backgroundTint="#000"
                android:background="@drawable/bg_self_content_action" />

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:id="@+id/self_content_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="@color/transparent" />

</android.support.design.circularreveal.CircularRevealFrameLayout>